--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,21 @@
 {
   "compilerOptions": {
-    "sourceMap": true,
-    "target": "es2017",
+    "module": "commonjs",
+    "strict": true,
+    "target": "es6",
     "outDir": "./dist",
-    "baseUrl": "./src"
+    "baseUrl": "./src",
+    "removeComments": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "moduleResolution": "node",
+    "importHelpers": true,
+    "types": [
+      "node"
+    ],
+    "typeRoots": [
+      "node_modules/@types"
+    ]
   },
   "include": [
     "src/**/*.ts"
