--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "ts-node ./src/server.ts",
     "build": "rm -rf ./dist/ && tsc && ./build-frontend.sh",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
-    "@types/node": "^12.12.14"
+    "@types/jest": "^24.0.23",
+    "@types/node": "^12.12.14",
+    "jest": "^24.9.0",
+    "ts-jest": "^24.2.0"
   }
 }
