--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "types": [
-      "node"
+      "node","jest"
     ],
     "typeRoots": [
       "node_modules/@types"
